--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -1,8 +1,26 @@
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    white;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    white;
+    opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    white;
+    opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color:    white;
+}
+:placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
+    color:    white;
+}
+
 body {
   /* background-image: url(bg.jpg); */
     background:#4FC47A;
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', cursive;
 }
 
 #icon {
@@ -40,7 +58,7 @@ body {
   border: none;
   border-radius: 2px;
   font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', cursive;
   color: #5B5B5B;
 }
 
@@ -50,7 +68,7 @@ body {
     margin-top: 10px;
     margin-right:20px;
     float:right;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Indie Flower', cursive;
     font-weight: bold;
     background: white;
     color: black;
@@ -82,7 +100,7 @@ header {
 #login {
   border:none;
   padding:7px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', cursive;
   background: white;
   color: black;
     border-left: 5px solid white;
@@ -103,7 +121,7 @@ header {
 #register {
   border:none;
   padding:7px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', cursive;
   border-radius: 2px;
   background: #57C157;
   color: white;
@@ -122,7 +140,7 @@ nav {
 
 .nav_el {
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', cursive;
   margin-right: 15px;
 }
 
@@ -249,10 +267,32 @@ input.radio:checked ~ label {
 }
 
 .ac_nav_li li:hover {
+    cursor: default;
     background:#4FC47A;
     color:white;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
+}
+
+.txtareasize {
+    height:500px;
+}
+
+.note_title {
+    font-size:25px;
+    padding:15px 0;
+    background:#4FC47A;
+    border:none;
+    border-bottom:1px solid white;
+    margin-bottom:15px;
+}
+
+.note_title:active {
+    border:none;
+}
+
+#tinymce .mceContentBody p {
+    font-family: 'Indie Flower', cursive !important;
 }
