note can be added and edited

--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -294,5 +294,5 @@ input.radio:checked ~ label {
 }
 
 #tinymce .mceContentBody p {
-    font-family: 'Indie Flower', cursive !important;
+    font-family: 'Architects Daughter', cursive;
 }
