--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -314,3 +314,10 @@ input.radio:checked ~ label {
     margin-right:auto;
     padding-bottom:30px;
 }
+
+.scrn1 {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width:70%;
+}
