--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -78,7 +78,7 @@ body {
 
 #submit:hover {
     border-radius: 0px;
-    background:#3B945C;
+    background:#4FC47A;
     color:white;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
