--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -1,3 +1,21 @@
+/* No ugly link Styles! */
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+/* Set input placeholder colors for all browsers */
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    white;
 }
@@ -316,8 +334,21 @@ input.radio:checked ~ label {
 }
 
 .scrn1 {
+    width:80%;
+    margin-top:30px;
+}
+
+.center {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    width:70%;
+}
+
+.txt1 {
+    font-size: 15px;
+    margin:50px;
+}
+
+.margin50 {
+    margin:50px;
 }
