--- a/view/static/styles.css
+++ b/view/static/styles.css
@@ -38,7 +38,7 @@ body {
   /* background-image: url(bg.jpg); */
     background:#4FC47A;
   color: white;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #icon {
@@ -76,7 +76,7 @@ body {
   border: none;
   border-radius: 2px;
   font-weight: bold;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Ubuntu', sans-serif;
   color: #5B5B5B;
 }
 
@@ -86,7 +86,7 @@ body {
     margin-top: 10px;
     margin-right:20px;
     float:right;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     background: white;
     color: black;
@@ -118,7 +118,7 @@ header {
 #login {
   border:none;
   padding:7px;
-  font-family: 'Indie Flower', cursive;
+    font-family: 'Ubuntu', sans-serif;
   background: white;
   color: black;
     border-left: 5px solid white;
@@ -139,7 +139,7 @@ header {
 #register {
   border:none;
   padding:7px;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Ubuntu', sans-serif;
   border-radius: 2px;
   background: #57C157;
   color: white;
@@ -158,7 +158,7 @@ nav {
 
 .nav_el {
   color: white;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Ubuntu', sans-serif;
   margin-right: 15px;
 }
 
@@ -312,7 +312,7 @@ input.radio:checked ~ label {
 }
 
 #tinymce .mceContentBody p {
-    font-family: 'Architects Daughter', cursive;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #error_container{
@@ -334,7 +334,7 @@ input.radio:checked ~ label {
 }
 
 .scrn1 {
-    width:80%;
+    width:90%;
     margin-top:30px;
 }
 
@@ -351,4 +351,8 @@ input.radio:checked ~ label {
 
 .margin50 {
     margin:50px;
+}
+
+.block_inline {
+    display: inline-block;
 }
