tab index and dynamic site header made i have ~ Yoda

--- a/view/header.html
+++ b/view/header.html
@@ -1,5 +1,11 @@
-<base href="/-K307/">
-<link rel="stylesheet" type="text/css" href="view/static/bootstrap.min.css">
-<link rel="icon" type="image/png" href="view/static/images/favicon.png">
-<link rel="stylesheet" type="text/css" href="view/static/styles.css">
-<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+<header>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-8"><a href="default/home"><h1><b>SwissNotes</b></h1></a></div>
+        <div class="col-md-2 padding20">
+            <a href="default/login"><button class="login">Anmelden</button></a>
+            <a href="default/register"><button class="login">Registrieren</button></a>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+</header>
