fixed W3C validation errors i have ~ Yoda

--- a/view/header.html
+++ b/view/header.html
@@ -3,8 +3,8 @@
         <div class="col-md-1"></div>
         <div class="col-md-8"><a href="default/home"><h1><b>SwissNotes</b></h1></a></div>
         <div class="col-md-2 padding20">
-            <a href="default/login"><button class="login">Anmelden</button></a>
-            <a href="default/register"><button class="login">Registrieren</button></a>
+            <button class="login" onclick="location.href='default/login';">Anmelden</button>
+            <button class="login" onclick="location.href='default/register';">Registrieren</button>
         </div>
         <div class="col-md-1"></div>
     </div>
